# spindlet

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
spindlet/: config.py
spindlet/database/: __init__.py  __init__.pyi  engine.py  enums.py  functions.py
spindlet/keyword/: __init__.py
spindlet/keyword/arguments/: __init__.py  parser.py  providers.py  resolver.py
spindlet/keyword/core/: __init__.py  base.py  context.py  exceptions.py  meta.py  store.py  utils.py
spindlet/keyword/runner/: __init__.py  context.py  flow.py  runner.py  source.py
spindlet/site/: __init__.py  base.py
spindlet/utils/: __init__.py  command.py  decorator.py  logger.py  string.py
spindlet/workflow/: __init__.py
spindlet/workflow/autotest/: __init__.py  runner.py  source.py  suite.py
spindlet/workflow/pipeline/: __init__.py  runner.py  source.py
tests/: test_database.py  test_keyword_arguments.py  test_keyword_store.py
