[tool.poetry]
name = "spindlet"
version = "0.0.1"
description = "A keyword-driven software testing framework"
authors = ["panfeng <fy975713384@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.6.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
