[project]
name = "spindlet"
version = "0.0.1"
description = "A keyword-driven software testing framework"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { text = "MIT" }
authors = [
    { name = "panfeng", email = "fy975713384@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "pydantic-settings",
    "loguru",
    "pendulum",
    "colorama",
    "jsonpath-ng",
    "requests",
    "pymysql",
    "pypika",
    "dbutils",
]

[project.urls]
Homepage = "https://github.com/fy975713384/spindlet"
Repository = "https://github.com/fy975713384/spindlet"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spindlet"]
